[package]
name = "GamepadEmulation"
version = "0.1.0"
edition = "2021"

[dependencies]
vigem = "0.9.1"
interception = "0.1.2"
cpal = "0.13.5"
colored = "2.0"

thread-priority = "1.0"
anyhow = "1.0.57"
bitflags = "1.3.2"

serde = { version = "1.0.137", features = ["derive"] }
clap = { version = "3.1.14", features = ["derive"] }
ron = "0.7.0"

log = "0.4.16"
env_logger = "0.9.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true